--- a/desafios/d011/estilo/style.css
+++ b/desafios/d011/estilo/style.css
@@ -1,4 +1,4 @@
-@charset "UTF-*";
+@charset "UTF-8";
 
 
 * {
@@ -9,11 +9,61 @@
 html,
 body {
   min-height: 100vh;
-  background-color: darkgray;
+  background-color: teal;
 }
 
 header {
   background-color: black;
   color: white;
   text-align: center;
+}
+
+header>h1 {
+  padding-top: 50px;
+  font-variant: small-caps;
+}
+
+header>p {
+  padding-bottom: 50px;
+}
+
+header a,
+footer a {
+  color: white;
+  text-decoration: none;
+  font-weight: bolder;
+}
+
+header a :hover,
+footer a:hover {
+  text-decoration: underline;
+}
+
+section {
+  padding-bottom: 10vh;
+  padding-top: 10vh;
+  line-height: 2em;
+  padding-left: 30px;
+}
+
+section.normal {
+  background-color: white;
+  color: black;
+}
+
+section.img {
+  background-color: aqua;
+  color: white;
+}
+
+section.img>p {
+  width: 400px;
+  background-color: rgba(0, 0, 0, 0.651);
+}
+
+footer {
+  background-color: black;
+  text-align: center;
+  color: white;
+  padding: 10px;
 }
