--- a/desafios/d011/estilo/style.css
+++ b/desafios/d011/estilo/style.css
@@ -1,15 +1,24 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Slab:wght@100..900&display=swap');
+
+:root {
+  --fonte1: Arial, Helvetica, sans-serif;
+  --fonte2: 'Kanit', sans-serif;
+  --fonte3: 'Roboto Slab', serif;
+}
 
 * {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
+  font-size: 1em;
 }
 
 html,
 body {
   min-height: 100vh;
   background-color: teal;
+  font-family: var(--fonte1);
 }
 
 header {
@@ -21,6 +30,8 @@ header {
 header>h1 {
   padding-top: 50px;
   font-variant: small-caps;
+  font-size: 4em;
+  font-family: var(--fonte2);
 }
 
 header>p {
@@ -34,7 +45,7 @@ footer a {
   font-weight: bolder;
 }
 
-header a :hover,
+header a:hover,
 footer a:hover {
   text-decoration: underline;
 }
@@ -44,6 +55,8 @@ section {
   padding-top: 10vh;
   line-height: 2em;
   padding-left: 30px;
+  font-family: var(--fonte3);
+  font-size: 2.5vw;
 }
 
 section.normal {
@@ -52,7 +65,7 @@ section.normal {
 }
 
 section.img {
-  background-color: aqua;
+  background-color: rgb(0, 0, 0);
   color: white;
 }
 
