--- a/desafios/d011/estilo/style.css
+++ b/desafios/d011/estilo/style.css
@@ -5,13 +5,12 @@
 :root {
   --fonte1: Arial, Helvetica, sans-serif;
   --fonte2: 'Kanit', sans-serif;
-  --fonte3: 'Roboto Slab', serif;
+  --fonte3: 'Rob  oto Slab', serif;
 }
 
 * {
   margin: 0;
   padding: 0;
-  font-size: 1em;
 }
 
 html,
@@ -56,23 +55,43 @@ section {
   line-height: 2em;
   padding-left: 30px;
   font-family: var(--fonte3);
-  font-size: 2.5vw;
+  font-size: 2vw;
 }
 
 section.normal {
   background-color: white;
-  color: black;
+  color: rgb(0, 0, 0);
 }
 
-section.img {
-  background-color: rgb(0, 0, 0);
+section.imagem {
+  background-color: rgb(51, 51, 51);
+  color: rgb(255, 255, 255);
+  box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.514);
+  background-attachment: fixed;
+}
+
+section.imagem>p {
+  display: inline-block;
+  padding: 5px;
+  background-color: rgba(0, 0, 1, 0.303);
+  text-shadow: 1px 1px 0px;
   color: white;
+
+
 }
 
-section.img>p {
-  width: 400px;
-  background-color: rgba(0, 0, 0, 0.651);
+section#img01 {
+  background-image: url("../imagens/background001.jpg");
+  background-position: right center;
+  background-size: cover;
+
 }
+
+section#img02 {
+  background-image: url("../imagens/background002.jpg");
+  background-size: cover;
+}
+
 
 footer {
   background-color: black;
